--- a/inapedia/players/french/210aki.md
+++ b/inapedia/players/french/210aki.md
@@ -6,7 +6,7 @@
 
 |Date|Place|Tournament|Tier|
 |-|-|-|-|
-| 08/2023 | 9th | [RTAXV7](/inapedia/tournaments/rtaxv/rtaxv7.md) | Minor |
+| 08/2023 | 9th | [RTAXV7](/inapedia/tournaments/rtaxv/rtaxv7.md) | Major |
 | 12/05/2023 | 5th | [Hades Garden #4](/inapedia/tournaments/hg/hg4.md) | Minor |
 | 04/05/2023 | 13th | [Ragnarok Strikers Xtreme #4](/inapedia/tournaments/ragna/ragnax4.md) | Major |
 | 05/2023 | 5th | [God Impact](/inapedia/tournaments/misc/godimpact.md) | Major |
