flags in player pages

--- a/inapedia/players/japanese/as7_9.md
+++ b/inapedia/players/japanese/as7_9.md
@@ -1,6 +1,6 @@
 # as7_9
 
-as7_9 is a Japanese player, maining all 3 playstyles. 
+as7_9 is a Japanese :jp: player, maining all 3 playstyles. 
 He is known for discovering and 
 developing many of the game's most popular techniques and strategies.
 
