grand celesta and mugen

--- a/inapedia/players/french/210aki.md
+++ b/inapedia/players/french/210aki.md
@@ -6,6 +6,7 @@
 
 |Date|Place|Tournament|Tier|
 |-|-|-|-|
+| 22/09/2023 | 5th | [Siege of MUGEN Castle](../../tournaments/misc/mugen.md) | Minor |
 | 08/2023 | 9th | [RTAXV7](../../tournaments/rtaxv/rtaxv7.md) | Major |
 | 12/05/2023 | 5th | [Hades Garden #4](../../tournaments/hg/hg4.md) | Minor |
 | 04/05/2023 | 13th | [Ragnarok Strikers Xtreme #4](../../tournaments/ragna/ragnax4.md) | Major |
