--- a/inapedia/players/brazilian/jppb2005.md
+++ b/inapedia/players/brazilian/jppb2005.md
@@ -6,4 +6,5 @@ jppb2005 is a Brazilian :brazil: player.
 
 |Date|Place|Tournament|Tier|
 |-|-|-|-|
+| 30/07/2023 | 9th | [Inazuma Eleven Strikers World Cup 2023](../../tournaments/worldcup23.md) | World Cup |
 | 26/08/2022 | 13th | [PEGASUS STRIKERS #10](../../tournaments/pegasus/pegasus10.md) | Major |
