a lot of lemonade work

--- a/inapedia/tournaments/lemonade/1_bd6.md
+++ b/inapedia/tournaments/lemonade/1_bd6.md
@@ -1,6 +1,6 @@
-# Backdraft V6
+# Backdraft V6 Goujin
 
-Backdraft V6 was the sixth edition of the [Lemonade Backdraft](bdmain.md) tournament series.
+Backdraft V6 Goujin was the sixth edition of the [Lemonade Backdraft](bdmain.md) tournament series for its premier Goujin league.
 12 players participated.
 
 Tier: National :brazil:
@@ -8,11 +8,12 @@ Tier: National :brazil:
 ## Overview
 
 ### Schedule
-- 
+- May 2021 to June 2021
 
 ### Format
 - Lemonade draft rules
-- Groups of 6
+- Group Stage
+    - Single Round Robin 
     - Top 4 advances to Final Stage
 - Final Stage
     - Single Elimination
