--- a/inapedia/tournaments/lemonade/1_bd5.md
+++ b/inapedia/tournaments/lemonade/1_bd5.md
@@ -1,13 +1,13 @@
-# Backdraft V5
+# Backdraft V5 Goujin
 
-Backdraft V5 was the fifth edition of the [Lemonade Backdraft](bdmain.md) tournament series.
+Backdraft V5 Goujin was the fifth edition of the [Lemonade Backdraft](bdmain.md) tournament series for its premier Goujin league.
 
 Tier: National :brazil:
 
 ## Overview
 
 ### Schedule
-- 
+- April 2021
 
 ### Format
 - Lemonade draft rules
