--- a/inapedia/tournaments/lemonade/1_bd7.md
+++ b/inapedia/tournaments/lemonade/1_bd7.md
@@ -1,6 +1,6 @@
-# Backdraft V7
+# Backdraft V7 Goujin
 
-Backdraft V7 was the seventh edition of the [Lemonade Backdraft](bdmain.md) tournament series.
+Backdraft V7 Goujin was the seventh edition of the [Lemonade Backdraft](bdmain.md) tournament series for its premier Goujin league.
 10 players participated.
 
 Tier: National :brazil:
@@ -8,11 +8,12 @@ Tier: National :brazil:
 ## Overview
 
 ### Schedule
-- 
+- August 2021
 
 ### Format
 - Lemonade draft rules
-- Groups of 5
+- Group Stage
+    - Single Round Robin 
     - Top 3 advances to Final Stage
 - Final Stage
     - Single Elimination
