--- a/inapedia/tournaments/lemonade/1_bd8.md
+++ b/inapedia/tournaments/lemonade/1_bd8.md
@@ -1,6 +1,6 @@
-# Backdraft V8
+# Backdraft V8 Goujin
 
-Backdraft V8 was the eigth edition of the [Lemonade Backdraft](bdmain.md) tournament series.
+Backdraft V8 Goujin was the eigth edition of the [Lemonade Backdraft](bdmain.md) tournament series for its premier Goujin league.
 12 players participated.
 
 Tier: National :brazil:
@@ -8,11 +8,12 @@ Tier: National :brazil:
 ## Overview
 
 ### Schedule
-- 
+- October 2021
 
 ### Format
 - Lemonade draft rules
-- Groups of 6
+- Group Stage
+    - Single Round Robin 
     - Top 3 advances to Final Stage
 - Final Stage
     - Single Elimination
