--- a/inapedia/tournaments/lemonade/1_bd9.md
+++ b/inapedia/tournaments/lemonade/1_bd9.md
@@ -1,6 +1,6 @@
 # Backdraft V9 Goujin
 
-Backdraft V9 Goujin was the ninth edition of the [Lemonade Backdraft](bdmain.md) tournament series.
+Backdraft V9 Goujin was the ninth edition of the [Lemonade Backdraft](bdmain.md) tournament series for its premier Goujin league. 
 12 players participated.
 
 Tier: National :brazil:
@@ -8,11 +8,11 @@ Tier: National :brazil:
 ## Overview
 
 ### Schedule
-- 
+- November 2021 to December 2021
 
 ### Format
 - Lemonade draft rules
-- Groups of 6
+- Group Stage
     - Top 3 advances to Final Stage
 - Final Stage
     - Single Elimination
@@ -26,4 +26,4 @@ Tier: National :brazil:
 |3rd :3rd_place_medal:| [MyssBH](../../players/brazilian/myssbh.md) |
 
 ### Bracket
-- [Challonge](https://challonge.com/BDV8)
+- [Challonge](https://challonge.com/BDV9)
