--- a/inapedia/players/brazilian/jppb2005.md
+++ b/inapedia/players/brazilian/jppb2005.md
@@ -6,5 +6,8 @@ jppb2005 is a Brazilian :brazil: player.
 
 |Date|Place|Tournament|Tier|
 |-|-|-|-|
+| 12/2023 | 3rd :3rd_place_medal: | [Goujin #5](../../tournaments/lemonade/xgoujin5.md) | National |
+ 10/2023 | 3rd :3rd_place_medal: | [Goujin #4](../../tournaments/lemonade/xgoujin4.md) | National |
 | 30/07/2023 | 9th | [Inazuma Eleven Strikers World Cup 2023](../../tournaments/worldcup23.md) | World Cup |
+| 04/2023 | 2nd :2nd_place_medal: | [Goujin #2](../../tournaments/lemonade/xgoujin2.md) | National |
 | 26/08/2022 | 13th | [PEGASUS STRIKERS #10](../../tournaments/pegasus/pegasus10.md) | Major |
