--- a/inapedia/players/japanese/as7_9.md
+++ b/inapedia/players/japanese/as7_9.md
@@ -14,3 +14,5 @@ developing many of the game's most popular techniques and strategies.
 | 30/07/2023 |1st :1st_place_medal: | [Inazuma Eleven Strikers World Cup 2023](../../tournaments/worldcup23.md) | World Cup |
 | 07/2023 | 9th | [Orfeo Inazuma Strikers World Cup 2023 Warm Up](../../tournaments/misc/orfeowc.md) | Major |
 | 05/2023 | 4th | [God Impact](../../tournaments/misc/godimpact.md) | Major |
+| 19/04/2020 | 3rd :3rd_place_medal: | [2nd Draft Cup](../../tournaments/jpdraft/jpdraft2.md) | National |
+| 17/02/2020 | 1st :1st_place_medal: | [1st Draft Cup](../../tournaments/jpdraft/jpdraft1.md) | National |
