--- a/inapedia/players/japanese/as7_9.md
+++ b/inapedia/players/japanese/as7_9.md
@@ -8,6 +8,7 @@ developing many of the game's most popular techniques and strategies.
 
 | Date | Place | Tournament | Tier |
 | - | - | - | - |
+| 26/11/2023 |3rd :3rd_place_medal:| [Hades Garden Xtreme Draft Cup](../../tournaments/draft/hgdraftx.md) | Draft | 
 | 06/10/2023 |1st :1st_place_medal: | [Hades Garden #6](../../tournaments/hg/hg6.md) | Major |
 | 07/09/2023 |3rd :3rd_place_medal: | [Ragnarok Strikers Xtreme #6](../../tournaments/ragna/ragnax6.md) | Major |
 | 08/2023 | 7th | [RTAXV7](../../tournaments/rtaxv/rtaxv7.md) | Major |
