--- a/inapedia/tournaments/misc/108.md
+++ b/inapedia/tournaments/misc/108.md
@@ -3,7 +3,7 @@
 Inasuto_108 was a tournament held by the French community but was open to all. It broke the record for the biggest international tournament at the time. 32 players participated.
 
 Tier: Major
-###### NOTE: Despite having only 32 players, this number was notably large in 2021, and thus deserves a special case of being classified as a Major. However, only the top 8 will be displayed as per Minors.
+###### NOTE: Despite this tournament having only 32 players, this number was notably large in 2021, and thus deserves a special case of being classified as a Major. However, only the top 8 will be displayed as per Minors.
 
 ## Overview
 
@@ -20,7 +20,7 @@ Tier: Major
 |-|-|
 |1st :1st_place_medal:|[Paraly](../../players/japanese/paraly.md) :jp:|
 |2nd :2nd_place_medal:|[Infi](../../players/japanese/infi.md) :jp:|
-|3rd :3rd_place_medal:|[katu6](../../players/japanese/katu6.md) :jp|
+|3rd :3rd_place_medal:|[katu6](../../players/japanese/katu6.md) :jp:|
 |4th|[Cherry](../../players/french/cherry.md) :fr:|
 |5th|[Caleb](../../players/bulgarian/caleb.md) :bulgaria:|
 |5th|[Kinun](../../players/senegalese/kinun.md) :senegal:|
