--- a/inapedia/tournaments/misc/108.md
+++ b/inapedia/tournaments/misc/108.md
@@ -1,5 +1,13 @@
 # Inasuto_108
 
+|Information|
+|-|
+|:calendar:: 08/21|
+|:busts_in_silhouette:: 32|
+|:trophy:: Major|
+|:desktop_computer:: Vanilla|
+|:1st_place_medal:: [Paraly](../../players/japanese/paraly.md) :jp:|
+
 Inasuto_108 was a tournament held by the French community but was open to all. It broke the record for the biggest international tournament at the time. 32 players participated.
 
 Tier: Major
