--- a/inapedia/players/brazilian/jppb2005.md
+++ b/inapedia/players/brazilian/jppb2005.md
@@ -6,6 +6,7 @@ jppb2005 is a Brazilian :brazil: player.
 
 |Date|Place|Tournament|Tier|
 |-|-|-|-|
+| 18/02/2024 | 9th |[Ragnarok Strikers Xtreme #8](../../tournaments/ragna/ragnax8.md) | Major |
 | 12/2023 | 3rd :3rd_place_medal: | [Goujin #5](../../tournaments/lemonade/xgoujin5.md) | National |
  10/2023 | 3rd :3rd_place_medal: | [Goujin #4](../../tournaments/lemonade/xgoujin4.md) | National |
 | 30/07/2023 | 9th | [Inazuma Eleven Strikers World Cup 2023](../../tournaments/worldcup23.md) | World Cup |
